--- a/src/components/main/textComponent/style.css
+++ b/src/components/main/textComponent/style.css
@@ -1,5 +1,11 @@
+.fullDisplay{
+height: 100%;
+width: 100%;
+display: flex;
+justify-content: center;
 
-.mainComponant {
+}
+ .mainComponant {
     text-align: left;
     margin: 15px;
     padding: 15px;
@@ -13,4 +19,4 @@
 }
 .date {
     color: rgb(43, 43, 43);
-}
+} 
